Fixing startup script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "npm build && node dist/main.js",
+    "start": "tsc && node dist/main.js",
     "build": "tsc"
   },
   "author": "Malexion",
