--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
           "request": "launch",
           "name": "Web Server",
           "preLaunchTask": "tsc: watch - tsconfig.json",
-          "program": "${workspaceFolder}/src/main.ts",
+          "program": "${workspaceFolder}/src/app.ts",
           "sourceMaps": true,
           "smartStep": true,
           "cwd": "${workspaceFolder}",
