--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "html-to-image-webserver",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/main.js",
+  "main": "dist/app.js",
   "dependencies": {
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/node": "^12.0.4",
     "@types/puppeteer": "^1.12.4",
     "@types/xmldom": "^0.1.29",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "puppeteer": "^1.17.0",
     "typescript": "^3.5.1",
@@ -15,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "tsc && node dist/main.js",
+    "start": "tsc && node dist/app.js",
     "build": "tsc"
   },
   "author": "Malexion",
